# light-model-transformer

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Jenkinsfile-nigthly  LICENSE  README.md  install.py  install_mkldnn.py  requirements-tf2.txt  requirements.txt  tf2topo.py  topo2code.py
BERT/: .dockerignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  Jenkinsfile  README.md  env.sh  modify_model.py  pb_inference.py  requirements-pt.txt  requirements-tf1.txt  requirements-tf2.txt
BERT/Dockerfile/: Dockerfile-ci
BERT/jenkins_resources/: quant_factors_uncased_L-12_H-768_A-12.txt
BERT/jenkins_resources/tf1/: quant_factors_uncased_L-12_H-768_A-12.txt
BERT/jenkins_resources/tf2/: quant_factors_hf_bert_cased.txt  quant_factors_uncased_L-12_H-768_A-12.txt  quant_factors_uncased_L-24_H-1024_A-16.txt
BERT/python/: .gitignore  CMakeLists.txt  README.md
BERT/python/bert_op/: __init__.py  bert_op_torch.py
BERT/python/bert_op/tensorflow/: __init__.py  bert_op_tensorflow.py
BERT/python/bert_op/torch/: __init__.py  bert_op_torch.py
BERT/python/model_modifier/: __init__.py  bert_op_helper.py  configure_bert_op.py  extract_pattern.py  pattern_extractor.py  pattern_locator.py  pattern_replacer.py
BERT/python/proto/model_modifier/: pattern.proto  recipe.proto
BERT/samples/pytorch_performance/: Dockerfile  README.md  build_sample.sh  entrypoint.sh
BERT/samples/tensorflow_no_model_modifier_performance/: Dockerfile  README.md  build_sample.sh  entrypoint.sh  requirements.txt
BERT/samples/tensorflow_performance/: Dockerfile  README.md  benchmark.py  build_image.sh  compile.sh  hf_to_saved_model.py  install_dependencies.sh  prepare_model.sh  recipe.pb  replace_full_bert.sh  requirements.txt  run_benchmark.sh
BERT/src/: CMakeLists.txt
BERT/src/bert_layer/: CMakeLists.txt  bert_context.h  bert_layer_quant_int8.cpp  bert_layer_quant_int8.h  bert_profiler.hpp  dnnl_attr.hpp  dnnl_common.h  dnnl_data.hpp  dnnl_ops.hpp  quant_factors.hpp
BERT/src/pytorch_op/: CMakeLists.txt  bert_op.cpp  bert_op.hpp
BERT/src/pytorch_op/include/pytorch_op/: bert_op.hpp
BERT/src/pytorch_op/python/: accuracy.py  benchmark.py  bert_op.py  test.py
BERT/src/tf_op/: CMakeLists.txt  bert_op.cpp  tensor_adapter.h
BERT/tests/: CMakeLists.txt
BERT/tests/benchmark/: benchmark.cpp
BERT/tests/bert_op/: quant_factors_uncased_L-12_H-768_A-12.txt  quant_factors_uncased_L-12_H-768_A-12_INVALID.txt  test_bert_op.py
BERT/tests/fine_tune_script/: README.md
BERT/tests/model_zoo/: README.md
BERT/tests/pytorch/: README.md  accuracy.py  benchmark.py
BERT/tests/tf1_ops_accuracy/: README.md  accuracy.py  accuracy_launcher.sh
BERT/tests/tf2_no_model_modifier/: README.md  accuracy.py  benchmark.py
BERT/tests/tf2_ops_accuracy/: README.md  accuracy.py  accuracy_launcher.sh  run_classifier.py
BERT/tf_ops/: benchmark.cpp  bert.cc  bert_layer_batch.h  bert_layer_mb1_dynamic_tokens.h  bert_layer_mb1_fixed_tokens.h  compile.sh  my_types.h  timer.h
BERT/util/: README.md
BERT/util/ci/: compare_csv.py
BERT/util/tf1-github/uncased_L-12_H-768_A-12/: replace_full_bert.sh
BERT/util/tf1-intelai/uncased_L-12_H-768_A-12/: fused_bert_node_def.pbtxt  replace_full_bert.sh
BERT/util/tf1/uncased_L-12_H-768_A-12/: fused_bert_node_def.pb  replace_full_bert.sh
BERT/util/tf2-github/uncased_L-12_H-768_A-12/: fused_bert_node_def.pbtxt  replace_full_bert.sh  url.txt
BERT/util/tf2-hf/: README.md
BERT/util/tf2-hf-roberta/roberta_base/: fused_bert_node_def.pbtxt  replace_full_bert.sh
BERT/util/tf2-hf-roberta/roberta_large/: replace_full_bert.sh
BERT/util/tf2-hf/bert_base/: replace_full_bert.sh
BERT/util/tf2-hf/bert_base_uncased/: create_huggingface.py  fused_bert_node_def.pbtxt  replace_full_bert.sh
BERT/util/tf2-hf/bert_large/: fused_bert_node_def.pbtxt  replce_full_bert.sh
BERT/util/tf2-intelai/uncased_L-24_H-1024_A-16/: fused_bert_node_def.pbtxt  replace_full_bert.sh
BERT/util/tf2-tfhub/bert_en_uncased_L-12_H-768_A-12_4/: replace_full_bert.sh  url.txt
BERT/util/tf2-tfhub/bert_en_uncased_L-24_H-1024_A-16/: fused_bert_node_def.pbtxt  replace_full_bert.sh  url.txt
PATCH/: caffe.patch  clip.patch
PATCH/mkldnn_patch/: PATCH.CFG  apply_patch.py
PATCH/mkldnn_patch/include/: patch_c_types_map.hpp  patch_jit_primitive_conf.hpp  patch_mkldnn.h  patch_mkldnn.hpp  patch_mkldnn_types.hpp  patch_verbose.hpp
cfg/: Main.cfg  Model.cfg  PATCH.cfg
inference_code/: ImageInference.cpp  Main.cpp  Model.hpp  build.sh
inference_code/include/: BatchNorm.h  Concat.h  Convolution.h  Deconvolution.h  ExtractImagePatches.h  Format.h  InnerProduct.h  Pad.h  Pooling.h  Relu.h  Reorder.h  Resize.h  ResizeBilinear.h  Scales.h  Softmax.h  Split.h  Sum.h
python/: README.md  optional_requirements.txt  requirements.txt  setup.py.in
python/model_modifier/: __init__.py  configure_bert_op.py  extract_pattern.py  make_recipe.py  pattern_extractor.py  pattern_locator.py  pattern_replacer.py  replace_pattern.py
python/proto/: CMakeLists.txt  compile_proto.sh
src/: CMakeLists.txt  __init__.py  pb_nodes.py  utils.py
src/bert_layer/: bert_context.h  bert_layer_quant_int8.h  bert_type_traits.h  dnnl_attr.hpp  dnnl_batchmatmul.h  dnnl_common.h  dnnl_data.hpp  dnnl_layernorm.h  dnnl_matmul.h  dnnl_matmul_quant.h  dnnl_ops.hpp  dnnl_softmax.h  my_types.h  timer.h
src/tf_op/: CMakeLists.txt  bert_op.cpp  tensor_adapter.h
tests/: README.md  pb_inference.py  test.cfg  test.py
tests/benchmark/: CMakeLists.txt  benchmark.cpp
tests/bert_op/: test_bert_op.py
tests/fine_tune_script/: README.md  run_classifier.py
tests/model_zoo/: README.md  run_model_zoo.py
tests/tf1_ops_accuracy/: README.md  accuracy.py  accuracy_launcher.sh
tests/tf1_ops_accuracy/utils/: timer.py  tvm_utils.py
tests/tf2_ops_accuracy/: README.md  accuracy.py  accuracy_launcher.sh  run_classifier.py
tests/tf_ops_accuracy/: README.md  accuracy.py  bert.py  main.py
tests/tf_ops_accuracy/utils/: __init__.py  io_utils.py  saved_model_utils.py  stk_logging.py  tf_utils.py
util/ci/: compare_csv.py  requirements.txt
(+41 files in other folders)
